src/objects/Message__c.object
<CustomObject>
    <fields>
        <fullName>ActivityId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Activity</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmployerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer</label>
        <referenceTo>Employer__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FreelancerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Freelancer</label>
        <referenceTo>Freelancer__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Message</label>
    <nameField>
        <label>Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <recordTypes>
        <fullName>Comment</fullName>
        <active>true</active>
        <label>Comment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>